--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,17 @@ gunicorn>=21.2.0
 
 # fastflyer 相关插件（插件间接依赖未申明）
 httptools>=0.1.2
-fastkit>=0.1.11
+fastkit>=0.1.12
+
+
+# opentelemetry 相关插件
+opentelemetry-exporter-otlp
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-logging
+opentelemetry-instrumentation-requests
+opentelemetry-instrumentation-httpx
+opentelemetry-instrumentation-redis
+opentelemetry-instrumentation-kafka-python
+opentelemetry-instrumentation-pymysql
+opentelemetry-instrumentation-sqlalchemy
+opentelemetry-instrumentation-threading
