--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -69,3 +69,39 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
+
+  docker-multiarch:
+    runs-on: ubuntu-latest
+    needs: pypi-publish  # 依赖PyPI发布完成
+    steps:
+      - uses: actions/checkout@v4
+      
+      # 设置多架构构建环境
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64,amd64
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: network=host
+        
+      # 登录Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      
+      # 多平台构建并推送
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/fastflyer:${{ github.ref_name }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/fastflyer:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
