更新发布配置

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,7 +67,7 @@ jobs:
 
   docker-multiarch:
     runs-on: ubuntu-latest
-    # needs: pypi-publish  # 依赖PyPI发布完成
+    needs: pypi-publish  # 依赖PyPI发布完成
     environment:
       name: Actions
     steps:
